<?xml version="1.0"?>
<package format="2">
    <name>my_action_server</name>
    <version>0.0.0</version>
    <description>The my_action_server package</description>
    <maintainer email="matt@todo.todo">matt</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>rospy</depend>
    <depend>actionlib</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <export>
    </export>
</package>